fixed API specification
